--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/FigmaMEDI_copy/fonts/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="/FigmaMEDI_copy/css/styleadapt.css">
-    <link rel="stylesheet" href="/FigmaMEDI_copy/css/style.css">
+    <link rel="stylesheet" href="/styleadapt.css">
+    <link rel="stylesheet" href="/style.css">
     <title>MEDI</title>
 </head>
 <body>
