--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/fonts/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="/styleadapt.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="/main/fonts/Gilroy/stylesheet.css">
+    <link rel="stylesheet" href="/main/styleadapt.css">
+    <link rel="stylesheet" href="/main/style.css">
     <title>MEDI</title>
 </head>
 <body>
