--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/root/fonts/Gilroy/stylesheet.css">
-    <link rel="stylesheet" href="/root/styleadapt.css">
-    <link rel="stylesheet" href="/root/style.css">
+    <link rel="stylesheet" type="text/css" href="https://yanovski.github.io/style.css">
+    <link rel="stylesheet" type="text/css" href=
+    <link rel="stylesheet" type="text/css" href=
     <title>MEDI</title>
 </head>
 <body>
